# liboptimization-dispatchers-external

./: .gitignore  Makefile.am  README  configure.ac  external.conf.ex
debian/: changelog  control  liboptimization2-dispatchers-external.install
src/: Makefile.am  config.cc  config.hh  dispatcher.cc  dispatcher.hh  external.cc
